--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.rider": "1.1.0",
     "com.unity.ide.vscode": "1.1.0",
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.postprocessing": "2.1.7",
     "com.unity.probuilder": "4.1.0",
     "com.unity.render-pipelines.lightweight": "6.9.1",
     "com.unity.shadergraph": "6.9.1",
